--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: nexa;
-  src: url(font/Nexa-Heavy.ttf);
+  src: url(../../font/Nexa-Heavy.ttf);
 }
 @font-face {
   font-family: prompt-black;
-  src: url(font/Prompt-Black.ttf);
+  src: url(../../font/Prompt-Black.ttf);
 }
 @font-face {
   font-family: roboto;
-  src: url(font/Roboto-Regular.ttf);
+  src: url(../../font/Roboto-Regular.ttf);
 }
 * {
   margin: 0;
@@ -361,7 +361,9 @@ header nav .cv:hover {
 .section3 .list {
   width: 100%;
   display: flex;
-  gap: 2vw;
+  justify-content: center;
+  gap: 22px;
+  flex-wrap: wrap;
 }
 .section3 .list h3 {
   color: #ebf1c6;
@@ -377,8 +379,8 @@ header nav .cv:hover {
 .section3 .list .langage, .section3 .list .framework, .section3 .list .outil {
   display: flex;
   flex-direction: column;
-  gap: 2vw;
-  width: 33%;
+  gap: 22px;
+  width: 350px;
 }
 .section3 .list .langage .name, .section3 .list .framework .name, .section3 .list .outil .name {
   width: 100%;
@@ -391,16 +393,74 @@ header nav .cv:hover {
   width: 100%;
   position: absolute;
   height: 0.4vw;
-  top: 2vw;
+  top: 22px;
   border-radius: 2px;
   border: 1px solid #3e3f3a;
 }
 .section3 .list .langage .name .barAr, .section3 .list .framework .name .barAr, .section3 .list .outil .name .barAr {
   position: absolute;
   height: 0.4vw;
-  top: 2vw;
+  top: 22px;
   border-radius: 2px;
   background-color: #ccee09;
 }
 
+
+.section4 {
+  width: 100%;
+  padding: 5vw;
+  background-color: #393a37;
+  display: flex;
+  flex-direction: column;
+  gap: 2vw;
+  height: auto;
+}
+
+.section4 h2 {
+  color: #ccee09;
+  font-size: 2em;
+  font-family: nexa;
+}
+
+.section4 .projetLaravel{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 22px;
+  flex-wrap: wrap;
+}
+
+.section4 .projetLaravel .esakafo, .section4 .projetLaravel .evoyage{
+  width: 350px;
+  background-color: #232421;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  gap: 1vw;
+  border-radius: 5px;
+}
+
+.section4 .projetLaravel div img{
+  width: 100%;
+  height: 30vh;
+  border-radius: 5px 5px 0 0;
+}
+
+.section4 .projetLaravel .esakafo .descri, .section4 .projetLaravel .evoyage .descri{
+  width: 100%;
+  padding: 1vw;
+}
+
+.section4 .projetLaravel .esakafo .descri h3, .section4 .projetLaravel .evoyage .descri h3 {
+  color: #aaaaa8;
+  font-size: 1em;
+  font-weight: bold;
+  font-family: nexa;
+}
+
+.section4 .projetLaravel .esakafo .descri p, .section4 .projetLaravel .evoyage .descri p {
+  color: #989b8a;
+  font-size: .8em;
+  font-family: roboto;
+}
 /*# sourceMappingURL=style.css.map */
