--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,14 +102,14 @@ header nav .mobile {
   align-items: center;
   flex-direction: column;
   gap: 40px;
-  padding: 5vw;
+  padding: 50px;
   position: absolute;
   width: 100%;
   color: #ebf1c6;
   font-size: 1.5rem;
-  height: 100vh;
+  height: 55vh;
   background-color: #232421;
-  top: 70px;
+  top: 100px;
   right: 0;
 }
 header nav .cv {
@@ -122,12 +122,32 @@ header nav .cv:hover {
   color: #232421;
   transition: 0.2s ease-in-out;
 }
+header nav .fa-bars, header nav .fa-x{
+  transition: .3s ease-in-out;
+}
 
 @media screen and (max-width: 875px) {
   header nav .simple {
     display: none;
   }
+  header nav .fa-bars{
+    display: inline;
+  }
+  header nav .fa-x{
+    display: none;
+  }
 }
+@media screen and (min-width: 875px) {
+
+header nav .menu{
+  display: none;
+}
+header nav .simple{
+  display: flex;
+}
+}
+
+
 .section1 {
   width: 100%;
   height: 70vh;
@@ -500,3 +520,4 @@ header nav .cv:hover {
     padding: 1vw;
   }
 }
+
